<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/balance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/balance_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/balance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_constraintStart_toStartOf="@id/balance_text"
                    app:layout_constraintTop_toBottomOf="@id/balance_text"
                    tools:text="Rp 300.000" />

                <TextView
                    android:id="@+id/monthly_income_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/monthly_income_text"
                    app:layout_constraintStart_toStartOf="@id/balance_text"
                    app:layout_constraintTop_toBottomOf="@id/balance_value" />

                <TextView
                    android:id="@+id/monthly_income_value"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    app:layout_constraintStart_toStartOf="@id/balance_text"
                    app:layout_constraintTop_toBottomOf="@id/monthly_income_text"
                    tools:text="Rp 200.000" />

                <TextView
                    android:id="@+id/monthly_expenditure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/monthly_expenditure_text"
                    app:layout_constraintStart_toStartOf="@id/balance_text"
                    app:layout_constraintTop_toBottomOf="@id/monthly_income_value" />

                <TextView
                    android:id="@+id/monthly_expenditure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    app:layout_constraintStart_toStartOf="@id/balance_text"
                    app:layout_constraintTop_toBottomOf="@id/monthly_expenditure_text"
                    tools:text="Rp 100.000" />

                <ImageView
                    android:id="@+id/warning_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/warning_image"
                    app:layout_constraintBottom_toBottomOf="@id/monthly_expenditure_text"
                    app:layout_constraintStart_toEndOf="@id/monthly_expenditure_text"
                    app:layout_constraintTop_toTopOf="@id/monthly_expenditure_text"
                    app:srcCompat="@drawable/ic_warning" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/monthly_expenditure_limit"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/monthly_expenditure_limit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu" />

        <ImageView
            android:id="@+id/history_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/history_image"
            app:layout_constraintStart_toStartOf="@id/monthly_expenditure_limit"
            app:layout_constraintTop_toBottomOf="@id/percent"
            app:srcCompat="@drawable/ic_history" />

        <TextView
            android:id="@+id/history_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:text="@string/history_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@id/history_image"
            app:layout_constraintStart_toEndOf="@id/history_image"
            app:layout_constraintTop_toTopOf="@id/history_image" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@id/monthly_expenditure_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/monthly_expenditure_limit"
            tools:text="80 %" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_image" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_item_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>