<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="contentDescription" />

        <Button
            android:id="@+id/income_button"
            android:layout_width="144dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            android:text="@string/income_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/expenditure_button"
            android:layout_width="144dp"
            android:layout_height="56dp"
            android:layout_marginEnd="24dp"
            android:text="@string/expenditure_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/income_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_container"
            android:layout_width="360dp"
            android:layout_height="240dp"
            android:layout_marginTop="48dp"
            app:cardBackgroundColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/income_button">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:text="@string/date_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/amount_text"
                app:layout_constraintStart_toStartOf="@id/date_text"
                app:layout_constraintTop_toBottomOf="@id/date_text" />

            <TextView
                android:id="@+id/notes_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/notes_text"
                app:layout_constraintStart_toStartOf="@id/amount_text"
                app:layout_constraintTop_toBottomOf="@id/amount_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/date_text"
                app:layout_constraintBottom_toBottomOf="@id/date_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/date_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/amount_text"
                app:layout_constraintBottom_toBottomOf="@id/amount_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/amount_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes_label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/notes_text"
                app:layout_constraintBottom_toBottomOf="@id/notes_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/notes_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:text="@string/save_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>